# aubio-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
bliss-audio-aubio-rs/: Cargo.toml
bliss-audio-aubio-rs/examples/: notes.rs
bliss-audio-aubio-rs/src/: lib.rs  log.rs  onset.rs  pitch.rs  resampler.rs  specdesc.rs  tempo.rs  vec.rs
bliss-audio-aubio-sys/: Cargo.toml  build.rs
scripts/: gen_bindings.sh  pre_compile.sh
